--- a/crystals.html
+++ b/crystals.html
@@ -4,35 +4,35 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Crystal Collector</title>
+	<title>The Gem Collection</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/crystalreset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/crystalstyle.css">
 </head>
 <body>
 	<div class="header">
-		<h1>Crystal Collector</h1>
+		<h1>The Gem Collection</h1>
 	</div>
 	<div class="instructions">
-		<h3>Here's how you play the game</h3>
+		<h3>To play...</h3>
 		</br>
-		<ol>
-			<li>You will be given a random number at the start of the game.<span>"Number To Get"</span></li>
-			<li>There are four crystals below.</li>
+		<ul>
+			<li>1. First, notice the goal number given.<span>"Goal Number"</span></li>
+			<li>2. Notice the 4 lovely crystals.</li>
 			<ul>
 				<li id="blue">Blue</li>
 				<li id="green">Green</li>
 				<li id="red">Red</li>
 				<li id="yellow">Yellow</li>
 			</ul>
-			<li>By clicking on a crystal, you will add a specific amount of points to your total score.</li>
-			<li>You win the game by matching your total score to the random number.</li>
-			<li>You lose the game if your total score goes above the random number.</li>
-			<li>The value of each crystal is hidden from you until you click on it.</li>
-			<li>Each time when the game starts, the game will change the values of each crystal.</li>
-		</ol>
+			<li>3. Clicking on any of the gems to add a secret number to your score.</li>
+			<li>4. To win, match your number to the goal number.</li>
+			<li>5. You'll lose if your total exceeds the goal number.</li>
+			<li>6. Each gem's value remains a secret until you click on it.</li>
+			<li>7. When the game restarts, the gems' values reset.</li>
+		</ul>
 	</div>
 	<div class="numberToMatch">
-		<h2>Number To Get:
+		<h2>Goal Number:
 			<span id= "randomNumber"></span>
 		</h2>
 	</div>
