--- a/index/GemCollector.html
+++ b/index/GemCollector.html
@@ -18,7 +18,7 @@
 	<h2>Instructions</h2>
 		</br>
 	<ul>
-		<li>1. First, notice the goal number given.<span>"Goal Number"</span></li>
+		<li>1. First, notice the goal number given.<div>"Goal Number"</div></li>
 		<li>2. Notice the 4 lovely crystals.</li>
 
 		<li id="blue">Blue</li>
@@ -27,7 +27,7 @@
 		<li id="yellow">Yellow</li>
 	</ul>
 	<ul>
-		<li>3. Click on any of the gems to add a secret number to your score.</li>
+		<li>3. Click the gems to add to your score.</li>
 		<li>4. To win, match your number to the goal number.</li>
 		<li>5. Don't go OVER the goal number, or you'll lose that round.</li>
 		<li>6. When the game restarts, the gems' values reset.</li>
@@ -39,22 +39,22 @@
 		</h2>
 	</div>
 	<div class="winLossTracker">
-		<h2>Wins:
-			<span id= "wins"></span>
+		<h2>Number of Wins:
+			<div id= "wins"></div>
 			</br>
-			Losses: 
-			<span id= "losses"></span>
+			Number of Losses: 
+			<div id= "losses"></div>
 		</h2>
 	</div>
 	<div class="gems center">
-		<img src="assets/Images/blue.png" class=gemImage id="first" alt="Blue Gem">
-		<img src="assets/Images/green.png" class=gemImage id="second" alt="Green Gem">
-		<img src="assets/Images/red.png" class=gemImage id= "third" alt="Red Gem">
-		<img src="assets/Images/yellow.png" class=gemImage id= "fourth" alt="Yellow Gem">
+		<img src="assets/Images/blue.png" class=gemImage id="first" alt="Blue">
+		<img src="assets/Images/green.png" class=gemImage id="second" alt="Green">
+		<img src="assets/Images/red.png" class=gemImage id= "third" alt="Red">
+		<img src="assets/Images/yellow.png" class=gemImage id= "fourth" alt="Yellow">
 	</div>
 	<div class="userScore">
 		<h2>Your total is:
-			<span id="total"></span>
+			<div id="total"></div>
 		</h2>
 	</div>
 </div>
